Attributes, styles CSS, classes CSS, text in HTML

--- a/9 DOM/index.html
+++ b/9 DOM/index.html
@@ -83,8 +83,6 @@
   </ul>
   <br>
   <hr>
-  <!--script src="js/dom_elements.js"></script-->
-  <script src="js/nodes_elements_selectors.js"></script>
   <hr>
   <br>
   <h3>Manejo del DOM</h3>
@@ -103,8 +101,7 @@
     </ul>
   </nav>
   <input type="text" name="nombre" placeholder="Nombre">
-  <a class="link-dom" data-id="1" data-description="Document Object Model" href="dom.html"
-    style="background-color: #F7DF1E; color: #222;">DOM</a>
+  <a class="link-dom" data-id="1" data-description="Document Object Model" href="dom.html" style="background-color: #F7DF1E; color: #222;">DOM</a>
   <section class="cards">
     <figure class="card">
       <img src="https://placeimg.com/200/200/tech" alt="Tech">
@@ -133,6 +130,12 @@
       <figcaption></figcaption>
     </figure>
   </template>
+  <!--script src="js/dom_elements.js"></script-->
+  <!--script src="js/nodes_elements_selectors.js"></script-->
+  <!--script src="js/attributes_and_data_attributes.js"></script-->
+  <!--script src="js/styles_variables_css.js"></script-->
+  <!--script src="js/classes_css.js"></script-->
+  <script src="js/text_html.js"></script>
 </body>
 
 </html>
