--- a/9 DOM/index.html
+++ b/9 DOM/index.html
@@ -135,7 +135,13 @@
   <!--script src="js/attributes_and_data_attributes.js"></script-->
   <!--script src="js/styles_variables_css.js"></script-->
   <!--script src="js/classes_css.js"></script-->
-  <script src="js/text_html.js"></script>
+  <!--script src="js/text_html.js"></script-->
+  <!--script src="js/dom_traversing.js"></script-->
+  <!--script src="js/creating_elements_and_fragments.js"></script-->
+  <!--script src="js/html_templates.js"></script-->
+  <!--script src="js/modifying_elements_old.js"></script-->
+  <script src="js/modifying_elements_new.js"></script>
+  
 </body>
 
 </html>
